<resources>
    <string name="app_name">MySugarBud</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_signout">Log out</string>

    <string name="menu_home">My Sugar Bud</string>
    <string name="menu_diets">My Sugar Bud</string>
    <string name="menu_slideshow">My Sugar Bud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logs_fragment">My Sugar Bud</string>
    <string name="exercise_fragment">My Sugar Bud</string>
    <string name="reminder_fragment">My Sugar Bud</string>
</resources>